:bar_chart: Fix centering, li spacing

--- a/paper/presentation/custom.css
+++ b/paper/presentation/custom.css
@@ -8,6 +8,7 @@
 
 li {
     text-align:justify;
+    margin: 3% 0 !important;
 }
 
 code {
